Horizontal scrollbar fixed

--- a/feature34.css
+++ b/feature34.css
@@ -1,5 +1,4 @@
 div.feature-container {
-    width: 100vw;
     padding: 30px 0; 
     font-family: 'Lato', sans-serif;
     font-size: 13px;
